[gd_scene load_steps=4 format=3 uid="uid://bbp0v2aoglhrr"]

[ext_resource type="Script" path="res://scenes/menu/Settings.gd" id="1_4scry"]
[ext_resource type="Theme" uid="uid://dgt5fjkytx07d" path="res://assets/resources/menu_theme.tres" id="1_v0h4s"]

[sub_resource type="LabelSettings" id="LabelSettings_2yad8"]
font_size = 64

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v0h4s")
script = ExtResource("1_4scry")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MainOptions" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/MainOptions"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_2yad8")

[node name="Back" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/MainOptions"]
layout_mode = 2
text = "Back
"

[node name="Restore" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/MainOptions"]
layout_mode = 2
text = "Restore Default Settings
"

[node name="DisplayOptions" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer4" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/DisplayOptions"]
layout_mode = 2
text = " 
"

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/DisplayOptions"]
layout_mode = 2
text = "Render Scale"

[node name="RenderScale" type="HSlider" parent="ScrollContainer/MarginContainer/VBoxContainer/DisplayOptions"]
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.05
value = 1.0

[node name="RenderScaleValue" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/DisplayOptions"]
layout_mode = 2
text = "1.0
"
horizontal_alignment = 1

[node name="Fullscreen" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/DisplayOptions"]
layout_mode = 2
text = "Fullscreen"

[node name="ReflectionOptions" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer4" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/ReflectionOptions"]
layout_mode = 2
text = " 
"

[node name="Label2" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/ReflectionOptions"]
layout_mode = 2
text = "Reflection Quality"

[node name="ReflectionQuality" type="HSlider" parent="ScrollContainer/MarginContainer/VBoxContainer/ReflectionOptions"]
layout_mode = 2
max_value = 512.0
step = 16.0
value = 256.0
rounded = true

[node name="ReflectionQualityValue" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/ReflectionOptions"]
layout_mode = 2
text = "256"
horizontal_alignment = 1

[node name="EnableReflections" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/ReflectionOptions"]
layout_mode = 2
button_pressed = true
text = "Enable Reflections"

[node name="RenderDistanceOptions" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Spacer" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/RenderDistanceOptions"]
layout_mode = 2
text = " 
"

[node name="Label3" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/RenderDistanceOptions"]
layout_mode = 2
text = "Render Distance
"

[node name="RenderDistance" type="HSlider" parent="ScrollContainer/MarginContainer/VBoxContainer/RenderDistanceOptions"]
layout_mode = 2
min_value = 5.0
max_value = 70.0
value = 35.0

[node name="FogOptions" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer3" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/FogOptions"]
layout_mode = 2
text = " 
"

[node name="Label5" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/FogOptions"]
layout_mode = 2
text = "Fog
"

[node name="EnableFog" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/FogOptions"]
layout_mode = 2
button_pressed = true
text = "Enable Fog"

[node name="FPSOptions" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer2" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/FPSOptions"]
layout_mode = 2
text = " 
"

[node name="Label4" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/FPSOptions"]
layout_mode = 2
text = "Maximum FPS
"

[node name="MaxFPS" type="HSlider" parent="ScrollContainer/MarginContainer/VBoxContainer/FPSOptions"]
layout_mode = 2
min_value = 20.0
max_value = 240.0
step = 5.0
value = 60.0
rounded = true

[node name="MaxFPSValue" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/FPSOptions"]
layout_mode = 2
text = "60"
horizontal_alignment = 1

[node name="LimitFPS" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/FPSOptions"]
layout_mode = 2
text = "Limit FPS"

[node name="CacheOptions" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer5" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/CacheOptions"]
layout_mode = 2
text = " 
"

[node name="CacheLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/CacheOptions"]
layout_mode = 2
text = "Cache"

[node name="ClearCache" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/CacheOptions"]
layout_mode = 2
text = "Clear Cache"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/MainOptions/Back" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/MainOptions/Restore" to="." method="_on_restore_pressed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/DisplayOptions/RenderScale" to="." method="_on_render_scale_value_changed"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/DisplayOptions/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/ReflectionOptions/ReflectionQuality" to="." method="_on_reflection_quality_value_changed"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/ReflectionOptions/EnableReflections" to="." method="_on_enable_reflections_toggled"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/FogOptions/EnableFog" to="." method="_on_enable_fog_toggled"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/FPSOptions/MaxFPS" to="." method="_on_max_fps_value_changed"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/FPSOptions/LimitFPS" to="." method="_on_limit_fps_toggled"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/CacheOptions/ClearCache" to="." method="_on_clear_cache_pressed"]
